--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-< !DOCTYPE html>
-  < html lang="en">
-    < head>
-      < meta charset="UTF-8">
-        < meta http - equiv="X-UA-Compatible" content="IE=edge">
-          < meta name="viewport" content="width=device-width, initial-scale=1.0">
-            < link rel="stylesheet" href=".css/style.css">
-              < title> Awesome books < /title>
-                  </head>
-                    < body>
-
-  < main>
-    < h1> Awesome books </h1>
-        < div class="books">
-          </div>
-            < form id="bookForm">
-              < ul>
-                <li>
-    <input type="text" placeholder="Book title" name="title" required />
-    </li>
-      < li>
-        <input type="text" placeholder="Book author" name="author" required />
-        </li>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Awesome books</title>
+  </head>
+  <body>
+    <main>
+      <h1>Awesome books</h1>
+      <div class="books"></div>
+      <form id="bookForm">
+        <ul>
           <li>
-            <button> Add book </button>
-                </li>
-                  </ul>
+            <input type="text" placeholder="Book title" name="title" required />
+          </li>
+          <li>
+            <input
+              type="text"
+              placeholder="Book author"
+              name="author"
+              required
+            />
+          </li>
+          <li>
+            <button type="button">Add book</button>
+          </li>
+        </ul>
       </form>
-        </main>
-< script src=".js/script.js">
-  </script>
-    </body>
-      </html>
+    </main>
+    <script src="./js/script.js"></script>
+  </body>
+</html>
