--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             />
           </li>
           <li>
-            <button type="button">Add book</button>
+            <button type="submit">Add book</button>
           </li>
         </ul>
       </form>
