--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Awesome books</title>
   </head>
   <body>
+    <header>
+      <div class="nav-container container-fluid mb-5  ">
+        <nav class=" navbar navbar-expand-lg navbar-light col-lg-10 mx-auto m-2 ">
+            <a href="./index.html" class="navbar-brand">Awesome Books</a>
+            <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#toggleMobileMenu"
+            aria-controls="toggleMobileMenu"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon hamburger"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <ul class="navbar-nav ms-auto text-center fw-bold text-dark d-flex justify-content-between ">
+                    <li>
+                        <a href="#" class="nav-link bordered">List</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link bordered">Add New</a>
+                    </li>
+                    <li class="#">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
+    </div>
+    </header>
     <main>
       <div id="headline">
         <h1>All Awesome Books</h1>
@@ -28,6 +61,9 @@
         </form>
       </div>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
