add navigation links

--- a/index.html
+++ b/index.html
@@ -43,33 +43,43 @@
     </div>
   </header>
   <main>
-    <div class="mt-5" id="headline">
-      <h1 >All Awesome Books</h1>
+
+    <div id="books-list">
+      <div class="mt-5" id="headline">
+        <h1>All Awesome Books</h1>
+      </div>
+      <!-- displayed books -->
+      <div id="books">
+        <div class="books"></div>
+      </div>
     </div>
 
-    <!-- displayed books -->
-    <div id="books">
-      <div class="books"></div>
-    </div>
+
+
+
     <!-- input fields -->
     <div id="input-fields">
-      <h2 class="input-header">Add New Book</h2>
+      <h2 class="input-header mt-5">Add New Book</h2>
       <form id="bookForm">
         <input type="text" placeholder="Book title" name="title" required />
         <input type="text" placeholder="Book author" name="author" required />
         <button class="add-button" type="submit">Add book</button>
       </form>
     </div>
-    <div class="contact container">
+
+
+    <div class="contact container mt-5">
       <h2>Contact information</h2>
       <p class="text-start w-75 mx-auto">Do you have any question or you just want to say "Hello" ? <br>You can reach out to us!</p>
 
       <ul class="contact-list text-start w-50 mx-auto">
         <li>Our email: awesome@gmail.com</li>
-          <li>Our phone number: 0043586534422</li>
-          <li>Our address: microverse street</li>
+        <li>Our phone number: 0043586534422</li>
+        <li>Our address: microverse street</li>
       </ul>
     </div>
+
+
   </main>
   <footer class="text-start mx-auto mt-5 mb-3">
     <div class="">
